Remove blocking of observables
This will make the system more reactive